--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -283,7 +283,7 @@
     }
   }
 
-  /* SongList */
+  /* List */
 
   .song-list__see-more {
     font-weight: 700;
@@ -381,9 +381,17 @@
   }
   
   .song__artist-image {
+    display: flex;
     justify-self: start;
     border-radius: var(--border-radius-s);
     overflow: hidden;
+  }
+
+  .song__artist-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 15px;
   }
   
   .song__name {
@@ -415,24 +423,26 @@
   
   @media (max-width: 480px) {
     .song__artist-image {
-      width: 50px;
-      height: 50px;
+      display: none;
     }
-  
-    .song__info,
-    .song__name {
-      font-size: 13px;
-    }
+
   }
   
   /* Player */
   
   .player {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+  }
+  
+  .player__container {
     justify-self: stretch;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 5px;
+    width: 100%;
   }
   
   .player__controllers {
@@ -500,5 +510,50 @@
       grid-row: 2;
       grid-column: 1 / span 2;
     }
+  }
+
+  /* Volume */
+
+  .volume__control {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+  }
+
+  .volume__control-slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100px; 
+    height: 4px;
+    background: #535353;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .volume__control-slider:hover {
+    background: #1db954;
+  }
+  
+  .volume__control-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 12px;
+    height: 12px;
+    background: white;
+    border-radius: 50%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    transition: transform 0.2s;
+  }
+  
+  .volume__control-slider:hover::-webkit-slider-thumb {
+    transform: scale(1.2);
+  }
+  
+  .volume__control-slider::-moz-range-thumb {
+    width: 12px;
+    height: 12px;
+    background: white;
+    border-radius: 50%;
+    border: none;
   }
   
